--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^9.6.9",
+    "firebaseui": "^6.0.1",
     "pinia": "0.1.0-alpha.1",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.14",
+    "youtube-vue3": "^0.1.13"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "~4.5.13",
     "@vue/compiler-sfc": "^3.0.0-0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0-0",
-    "typescript": "~3.9.3"
+    "prettier": "^2.6.0",
+    "typescript": "~4.1.5"
   }
 }
